<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:title="Vos préférences">

        <gei.soprapp.ListPreferenceSites
            android:key="pref_key_site"
            android:summary="@string/pref_site_summary"
            android:title="@string/pref_site_title"/>

        <gei.soprapp.MultiSelectListPreferenceSalles
        android:key="pref_key_salles"
        android:summary="@string/pref_rooms_summary"
        android:title="@string/pref_rooms_title"/>
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/pref_notif">
            <CheckBoxPreference
            android:key="pref_key_notif_new"
            android:summary="@string/pref_notif_new_summary"
            android:title="@string/pref_notif_new_title"
            android:defaultValue="true"/>
            <CheckBoxPreference
                android:key="pref_key_notif_delete"
                android:summary="@string/pref_notif_delete_summary"
                android:title="@string/pref_notif_delete_title"
                android:defaultValue="true"/>
    </PreferenceCategory>

</PreferenceScreen>